--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -29,9 +29,14 @@ body { padding-top: 60px; }
   }
 }
 
+body{
+  background-image: url("/assets/background.jpg");
+}
 
 // main page
 .hero-unit {
+  height:500px;
+  background-image: url("/assets/hero-bg.png");
   h1 small {
    display: block;
   }
