--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -31,14 +31,21 @@ body { padding-top: 60px; }
 
 body{
   background-image: url("/assets/background.jpg");
+  color:#CCC;
 }
 
 // main page
 .hero-unit {
-  height:500px;
+  height:350px;
+  position:relative;
+  top:100px;
   background-image: url("/assets/hero-bg.png");
-  h1 small {
-   display: block;
+  background-repeat: repeat-x;
+  background-color:transparent;
+  color:#CCC;
+  h3 small {
+    color:#CCC;
+    display: block;
   }
 }
 
