--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -31,7 +31,6 @@ body { padding-top: 60px; }
 
 body{
   background-image: url("/assets/background.jpg");
-  color:#CCC;
 }
 
 // main page
@@ -42,9 +41,8 @@ body{
   background-image: url("/assets/hero-bg.png");
   background-repeat: repeat-x;
   background-color:transparent;
-  color:#CCC;
+  color:#AA9;
   h3 small {
-    color:#CCC;
     display: block;
   }
 }
