--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,8 @@
     <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" href="../assets/ico/favicon.png">
 </head>
-<body>
-
+<body class="<%= @homepage ? 'homepage' : ''%>">
   <!-- nav bar -->
-
   <%= render 'layouts/header'%>
   <article class="container">
     <% flash.each do |key, value| %>
