--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -80,6 +80,34 @@ body.homepage{
   background-color:rgb(17,49,96);
 }
 
+.box{
+  text-align: center; 
+}
+
+.form-horizontal .control-label{
+  text-align: left;
+  width:100px;
+  padding-top: 10px;
+}
+
+.control-group{
+  vertical-align: bottom;
+}
+
+.form-horizontal .controls {
+  margin-left:120px;
+  input{
+    width:300px;
+    height:30px;
+  }
+}
+
+.client-registration{
+  width:40%;
+  margin:auto;
+  text-align: left;
+}
+
 // add game form
 .new_game .input-append div.add-on {
     height: inherit !important;
