--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -94,6 +94,13 @@ body.homepage{
   vertical-align: bottom;
 }
 
+.login .form-horizontal .control-group {
+  input{
+    width:300px;
+    height:30px;
+  }
+}
+
 .form-horizontal .controls {
   margin-left:120px;
   input{
@@ -102,7 +109,7 @@ body.homepage{
   }
 }
 
-.client-registration{
+.registration-form{
   width:40%;
   margin:auto;
   text-align: left;
