--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,30 +1,30 @@
 <%= provide(:title, 'Start using InstaLegal') %>
 <div class="registration box">  
-  <div class="client-registration">
+  <div class="registration-form">
     <%= form_for @client, :html=>{:class=>"form-horizontal"} do |f| %>
       <fieldset>
-        <legend>Start using InstaLegal</legend>
+        <legend>Client Signup</legend>
         <%= render 'shared/error_messages', model: @client %>
         <div class="control-group">
-          <%= f.label :name, :class=>"control-label label-left" %>
+          <%= f.label :name, :class=>"control-label" %>
           <div class="controls">
             <%= f.text_field :name, placeholder: "Name..." %>
           </div>
         </div>
         <div class="control-group">
-          <%= f.label :email, :class=>"control-label label-left" %>
+          <%= f.label :email, :class=>"control-label" %>
           <div class="controls">
             <%= f.text_field :email, placeholder: "Email..." %>
           </div>
         </div>
         <div class="control-group">
-          <%= f.label :password, :class=>"control-label label-left" %>
+          <%= f.label :password, :class=>"control-label" %>
           <div class="controls">
             <%= f.password_field :password, placeholder: "Password..." %>
           </div>
         </div>
         <div class="control-group">
-          <%= f.label :phone_number, :class=>"control-label label-left" %>
+          <%= f.label :phone_number, :class=>"control-label" %>
           <div class="controls">
             <%= f.text_field :phone_number, placeholder: "Phone number..." %>
           </div>
