--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -8,11 +8,6 @@ body { padding-top: 60px; }
   color: #f00;
 }
 
-.field_with_errors {
-  @extend .control-group;
-  @extend .error;
-}
-
 // header
 .nav {
   &.user {
@@ -76,7 +71,7 @@ body.homepage{
   background-repeat: repeat-x;
 }
 
-.btn:hover{
+.box .btn:hover, .hero-unit .btn:hover{
   background-color:rgb(17,49,96);
 }
 
