--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -94,7 +94,7 @@ body {
 
 .login .form-horizontal .control-group {
   input{
-    width:300px;
+    width:335px;
     height:30px;
   }
 }
@@ -107,6 +107,16 @@ body {
   }
 }
 
+div.login fieldset{
+  padding-left: 50px;
+  hr{
+    width:85%;
+  }
+  legend{
+    width:85%;
+  }
+}
+
 .registration-form{
   width:40%;
   margin:auto;
@@ -114,7 +124,7 @@ body {
   border:solid;
   border-width: 2px;
   border-radius: 15px;
-  padding: 10px;
+  padding: 20px;
   border-color: #CCC;
   background-color: rgb(250, 250, 250);
 }
