Add support for lawyers to upload their profile photos

--- a/app/views/lawyers/_lawyer.html.erb
+++ b/app/views/lawyers/_lawyer.html.erb
@@ -1,6 +1,6 @@
 <li class="span3">
   <div class="thumbnail">
-    <img data-src="holder.js/300x200" alt="">
+    <%= image_tag lawyer.avatar.url(:medium) %>
     <h3><%= lawyer.name %></h3>
     <%= link_to '#',
         data: {
