Added description field in Lawyer registration

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -105,6 +105,11 @@ body {
     width:335px;
     height:30px;
   }
+
+  textarea{
+    width: 335px;
+    height: 150px;
+  }
 }
 
 div.login fieldset{
