--- a/app/views/lawyers/new.html.erb
+++ b/app/views/lawyers/new.html.erb
@@ -24,6 +24,12 @@
           </div>
         </div>
         <div class="control-group">
+          <%= f.label :description, :class=>"control-label" %>
+          <div class="controls">
+            <%= f.text_area :description, placeholder: "Give a brief description of your skills" %>
+          </div>
+        </div>
+        <div class="control-group">
           <%= f.label :phone_number, :class=>"control-label" %>
           <div class="controls">
             <%= f.text_field :phone_number, placeholder: "Phone number..." %>
