minor changes alongwith link to sign up on homepage

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -74,7 +74,7 @@ body {
   background-repeat: repeat-x;
 }
 
-.box .btn:hover, .hero-unit .btn:hover{
+.box .btn-primary:hover, .hero-unit .btn-primary:hover{
   background-color:rgb(17,49,96);
 }
 
