--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
           <h3>Get instant legal help</h3>
           <p>We are awesome. Give us money. Now. </p>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a href="" class="btn btn-primary btn-large">Sign Up &raquo;</a></p>
+          <p><a href="/clients/new" class="btn btn-primary btn-large">Sign Up &raquo;</a></p>
         </div>
         
         <div class="lawyer-profile">
