--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
         <ul class="nav">
           <li>
-            <%= link_to "Terms & Conditions", "/tos.html" %>
+            <%= link_to "Terms & Conditions", tos_path %>
           </li>
 
         <ul>
